# VK_LAYER_EXT_zero_initialize_device_memory

./: CMakeLists.txt  library.h
